--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }}
             </div>
             <div class="col-md-6 col-sm-12 text-center text-lg-right">
-                <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs Jekyll Theme</a> by WowThemes.net
+                Built on <a target="_blank" href="https://www.wowthemes.net/memoirs-free-jekyll-theme/">Memoirs</a>, a Jekyll Theme by WowThemes.net
             </div>
         </div>
     </div>
