--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -17,7 +17,7 @@ $enable-rounded: false;
 
 
 // general
-body, input, button, select, optgroup, textarea {   
+body, input, button, select, optgroup, textarea {
     font-family:Sen;
 }
 body {
@@ -32,6 +32,10 @@ img {
     height:auto;
 }
 
+h1 {
+    text-transform: uppercase;
+}
+
 h1,h2,h3,h4,h5,h6 {
     font-weight:700;
 }
@@ -39,7 +43,7 @@ h1,h2,h3,h4,h5,h6 {
     padding-top:50px;
 }
 .sitetag {
-    font-weight:700;    
+    font-weight:700;
     line-height:1.3;
     font-size:35px;
     @include media-breakpoint-up(sm) {
@@ -69,17 +73,17 @@ blockquote {
     }
 }
 // animation
-.nav-icon, 
-.hamburger-bar, 
-.hamburger-bar:before, 
-.hamburger-bar:after, 
-#menu, 
-body, 
-a, 
-a:hover, 
-body.active-side, 
-.site-content, 
-.show-search, .show-search:hover, 
+.nav-icon,
+.hamburger-bar,
+.hamburger-bar:before,
+.hamburger-bar:after,
+#menu,
+body,
+a,
+a:hover,
+body.active-side,
+.site-content,
+.show-search, .show-search:hover,
 .title, .title:hover,
 .card, .card:hover,
 img, img:hover {
@@ -236,7 +240,7 @@ img, img:hover {
     grid-template-rows: 1fr;
     grid-gap: 30px;
 }
-.blog-grid-item {  
+.blog-grid-item {
     color: #333;
     padding: 0;
     display: flex;
@@ -248,8 +252,8 @@ img, img:hover {
     }
     .card {
         border:0;
-        &:hover {           
-           .card-title a { 
+        &:hover {
+           .card-title a {
                 background-size: 100% 100%;
             }
         }
@@ -258,7 +262,7 @@ img, img:hover {
         font-weight:700;
         font-size:22px;
         line-height:1.4;
-        a { 
+        a {
             background-image: linear-gradient(180deg, transparent 89%, $primary 0);
             background-repeat: no-repeat;
             background-size: 0 100%;
@@ -301,7 +305,7 @@ img, img:hover {
         grid-column-end: 3;
         grid-row-start: 1;
         grid-row-end: 3;
-        flex-direction: column;  
+        flex-direction: column;
         align-items: flex-start;
         font-size: 1em;
         padding:0;
@@ -329,7 +333,7 @@ img, img:hover {
         .card-title {
             font-size:18px;
             line-height:1.5;
-        }      
+        }
     }
 }
 
@@ -363,10 +367,10 @@ img, img:hover {
     h4 {
         line-height:1.3;
     }
-    margin-top:120px;   
+    margin-top:120px;
     img.newsletter-logo {
         max-height:70px;
-    } 
+    }
     input {
         border:1px solid transparent;
     }
@@ -378,7 +382,7 @@ img, img:hover {
             padding:4px 10px;
             min-width:250px;
         }
-        input[type="submit"] {    
+        input[type="submit"] {
             color: #222;
             padding: 4px 20px;
             margin-left:-5px;
@@ -392,7 +396,7 @@ img, img:hover {
     }
 }
 
-// blog 
+// blog
 .article-post, .entry-header, .comments, .rating, .authorbox {
     max-width: 740px;
     padding-left: 20px;
@@ -405,8 +409,8 @@ img, img:hover {
     font-weight:700;
     line-height:1.2;
 }
-.entry-featured-image {  
-    width:940px;  
+.entry-featured-image {
+    width:940px;
     max-width: 100%;
     text-align:center;
     margin-left:auto;
@@ -414,7 +418,7 @@ img, img:hover {
     margin-top:50px;
     margin-bottom:50px;
 }
-.image-shadow {   
+.image-shadow {
     -webkit-box-shadow: 0 7px 50px 0 rgba(84,110,122,.15);
     -moz-box-shadow: 0 7px 50px 0 rgba(84,110,122,.15);
     box-shadow: 0 7px 50px 0 rgba(84,110,122,.15);
@@ -441,7 +445,7 @@ img, img:hover {
         padding:2px;
     }
 }
-.article-post {    
+.article-post {
     font-size:18px;
     p {
         margin-top:30px;
@@ -522,9 +526,9 @@ img, img:hover {
 }
 
 //share
-.share { 
+.share {
     position:fixed;left:15px;bottom:40%;z-index: 1026;
-    text-align:center;    
+    text-align:center;
     ul {
         list-style:none;
         padding-left:0;
@@ -644,9 +648,9 @@ body.active-side {
         grid-row-start: 1;
         grid-row-end: 2;
     }
-    .blog-grid-item .img-thumb, 
-    .firstpage .blog-grid-item:nth-child(1) .img-thumb, 
-    .firstpage .blog-grid-item:nth-child(2) .img-thumb, 
+    .blog-grid-item .img-thumb,
+    .firstpage .blog-grid-item:nth-child(1) .img-thumb,
+    .firstpage .blog-grid-item:nth-child(2) .img-thumb,
     .firstpage .blog-grid-item:nth-child(3) .img-thumb {
         height:auto;
     }
@@ -693,7 +697,7 @@ body.active-side {
         display:inline-block;
         margin: 10px 15px !important;
     }
-    
+
     #menu ul {
         padding: 80px 30px 80px 30px;
     }
@@ -710,7 +714,7 @@ body.active-side {
             width: 170px;
         }
     }
-    .article-post, .entry-header, .comments, .rating, .authorbox { 
+    .article-post, .entry-header, .comments, .rating, .authorbox {
         padding-left:0;
         padding-right:0;
     }
