--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -43,12 +43,14 @@ h1,h2,h3,h4,h5,h6 {
     padding-top:50px;
 }
 .sitetag {
-    font-weight:700;
-    line-height:1.3;
-    font-size:35px;
+    font-weight:300;
+    line-height:1.2;
+    font-size:25px;
+    text-transform: uppercase;
+
     @include media-breakpoint-up(sm) {
-        font-size:50px;
-        line-height:1.2;
+        font-size:40px;
+        line-height:1.1;
     }
 }
 .bigradius {
