--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -22,7 +22,7 @@ body, input, button, select, optgroup, textarea {
 }
 body {
     line-height:1.7;
-    background: #f4f4f4;
+    background: #000;
 }
 a {
     color: darken($primary, 24%);
@@ -46,7 +46,7 @@ h1,h2,h3,h4,h5,h6 {
     font-weight:300;
     line-height:1.2;
     font-size:25px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
 
     @include media-breakpoint-up(sm) {
         font-size:40px;
@@ -582,7 +582,7 @@ img, img:hover {
         }
     }
     span.body {
-        color: $gray-500;
+        color: $white;
         line-height:1.7;
         display:block;
         margin-bottom:10px;
