--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -23,6 +23,7 @@ body, input, button, select, optgroup, textarea {
 body {
     line-height:1.7;
     background: #000;
+    color: $white;
 }
 a {
     color: darken($primary, 24%);
@@ -46,7 +47,7 @@ h1,h2,h3,h4,h5,h6 {
     font-weight:300;
     line-height:1.2;
     font-size:25px;
-    // text-transform: uppercase;
+    text-transform: uppercase;
 
     @include media-breakpoint-up(sm) {
         font-size:40px;
