--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -23,7 +23,7 @@ body, input, button, select, optgroup, textarea {
 body {
     line-height:1.7;
     background: #000;
-    color: $white;
+    color: #fff;
 }
 a {
     color: darken($primary, 24%);
