--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -44,10 +44,12 @@ h1,h2,h3,h4,h5,h6 {
     padding-top:50px;
 }
 .sitetag {
-    font-weight:300;
+    font-weight:700;
     line-height:1.2;
     font-size:25px;
     text-transform: uppercase;
+    -webkit-text-stroke: 1px white;
+    color: #000;
 
     @include media-breakpoint-up(sm) {
         font-size:40px;
@@ -411,6 +413,8 @@ img, img:hover {
     font-size:50px;
     font-weight:700;
     line-height:1.2;
+    -webkit-text-stroke: 1px white;
+    color: #000;
 }
 .entry-featured-image {
     width:940px;
