--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -123,7 +123,7 @@ img, img:hover {
 }
 // menu
 .navbar-brand img {
-    max-height:100px;
+    max-height:920px;
     margin-bottom:40px;
     margin-top:40px;
 }
@@ -289,7 +289,7 @@ img, img:hover {
         border-top:0;
         padding: 1rem 1.25rem;
         a {
-            color:inherit;
+            color:#000;
             font-weight:700;
         }
     }
