--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -246,7 +246,7 @@ img, img:hover {
     grid-gap: 30px;
 }
 .blog-grid-item {
-    color: #fff;
+    color: #000;
     padding: 0;
     display: flex;
     align-items:center;
@@ -256,6 +256,7 @@ img, img:hover {
         margin-right: 7px;
     }
     .card {
+        background-color: #000;
         border:0;
         &:hover {
            .card-title a {
