--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -50,6 +50,7 @@ h1,h2,h3,h4,h5,h6 {
     text-transform: uppercase;
     -webkit-text-stroke: 1px white;
     color: #000;
+    text-align: center;
 
     @include media-breakpoint-up(sm) {
         font-size:40px;
@@ -238,6 +239,7 @@ img, img:hover {
 
 // blog grid
 .blog-grid-container {
+  background-color: #000;
     width: auto;
     margin: 50px auto;
     display: grid;
@@ -246,7 +248,7 @@ img, img:hover {
     grid-gap: 30px;
 }
 .blog-grid-item {
-    color: #000;
+    color: #fff;
     padding: 0;
     display: flex;
     align-items:center;
@@ -588,7 +590,7 @@ img, img:hover {
         }
     }
     span.body {
-        color: $white;
+        color: #fff;
         line-height:1.7;
         display:block;
         margin-bottom:10px;
