--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -291,6 +291,7 @@ img, img:hover {
        font-size:14px;
         border-top:0;
         padding: 1rem 1.25rem;
+        background-color: black;
         a {
             color:#000;
             font-weight:700;
