--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -6,7 +6,7 @@ $brown: #B59F62;
 $teal: #40FFDC;
 $black: #111;
 $primary: $teal;
-$dark:    #fff;
+$dark:    #000;
 $enable-rounded: false;
 
 @import "bootstrap/functions";
