--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -238,6 +238,9 @@ img, img:hover {
 
 
 // blog grid
+.bg-white {
+    background-color: #000 !important;
+}
 .blog-grid-container {
   background-color: #000;
     width: auto;
