--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -273,6 +273,7 @@ img, img:hover {
         font-weight:700;
         font-size:22px;
         line-height:1.4;
+        color: #fff;
         a {
             background-image: linear-gradient(180deg, transparent 89%, $primary 0);
             background-repeat: no-repeat;
@@ -289,6 +290,8 @@ img, img:hover {
         font-size:16px;
         line-height:1.8;
         margin-top:15px;
+        color: #fff;
+
     }
     .card-footer {
        font-size:14px;
