--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -238,9 +238,6 @@ img, img:hover {
 
 
 // blog grid
-.bg-white {
-    background-color: #000 !important;
-}
 .blog-grid-container {
   background-color: #000;
     width: auto;
@@ -249,6 +246,7 @@ img, img:hover {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-gap: 30px;
+    color: #fff;
 }
 .blog-grid-item {
     color: #fff;
@@ -263,9 +261,12 @@ img, img:hover {
     .card {
         background-color: #000;
         border:0;
+        color: #fff;
+
         &:hover {
            .card-title a {
                 background-size: 100% 100%;
+                color: #fff;
             }
         }
     }
@@ -298,6 +299,8 @@ img, img:hover {
         border-top:0;
         padding: 1rem 1.25rem;
         background-color: #000;
+        color: #fff;
+
         a {
             color:#000;
             font-weight:700;
@@ -306,6 +309,8 @@ img, img:hover {
     .post-date {
         float:right;
         margin-top: 10px;
+        color: #fff;
+
     }
     .img-thumb {
         object-fit:cover;
