--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -7,6 +7,7 @@ $teal: #40FFDC;
 $black: #111;
 $primary: $teal;
 $dark:    #000;
+$white:    #fff;
 $enable-rounded: false;
 
 @import "bootstrap/functions";
@@ -528,6 +529,7 @@ img, img:hover {
 .comments {
     margin-top:30px;
     margin-bottom:60px;
+    color: $white;
     #comments {
         display:none;
         margin-top:60px;
@@ -558,7 +560,7 @@ img, img:hover {
         li {
             margin:15px 0;
             a {
-                color:$dark;
+                color:$white;
             }
         }
     }
