--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -359,7 +359,7 @@ img, img:hover {
     }
 }
 .bg-white {
-    background-color: $white !important;
+    background-color: $dark !important;
 }
 
 //pagination
