theme css and about

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -79,6 +79,22 @@ blockquote {
         font-weight:700;
     }
 }
+
+.btn {
+    display: grid;
+    font-weight: 400;
+    color: #212529;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid #fff;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+    transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
 // animation
 .nav-icon,
 .hamburger-bar,
