--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -83,7 +83,7 @@ blockquote {
 .btn {
     display: grid;
     font-weight: 400;
-    color: #212529;
+    color: #ffffff;
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
