--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -95,6 +95,7 @@ blockquote {
     line-height: 1.5;
     border-radius: 0;
     transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+  }
 // animation
 .nav-icon,
 .hamburger-bar,
