--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -271,6 +271,9 @@ img, img:hover {
     padding: 0;
     display: flex;
     align-items:center;
+    border: solid white 1px;
+    padding: 15px;
+
     .author-thumb {
         width:40px;
         border-radius:50%;
