--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -154,7 +154,7 @@ img, img:hover {
     height: 100%;
     border-right: solid rgba(255, 255, 255, 0.5) 1px;
     z-index: 1022;
-    background:#000;
+    background:#ffd600;
 }
 .nav-icon {
     position: fixed;
