--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -463,6 +463,7 @@ img, img:hover {
     margin-right: auto;
     margin-top:50px;
     margin-bottom:50px;
+    border-radius: 5px;
 }
 .image-shadow {
     -webkit-box-shadow: 0 7px 50px 0 rgba(84,110,122,.15);
@@ -582,7 +583,7 @@ img, img:hover {
         li {
             margin:15px 0;
             a {
-                color:$white;
+                color:$dark;
             }
         }
     }
