--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -591,6 +591,7 @@ img, img:hover {
 
 //search
 .show-search {
+    color:$dark;
     cursor:pointer;
     &:hover {
         color: darken($primary,20%);
