--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,6 +102,8 @@
             </div>
         </form>
     </div>
+
+  <iframe src="https://www.submithub.com/widget.html?color=000&background=40FFDC&size=24px&text=Have music to share? Send it our way!&blog=polyaux" frameborder="0" scrolling="no" width="100%" height="150px"></iframe>
     {% endif %}
 
 </div>
