--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,7 +103,13 @@
         </form>
     </div>
 
-  <iframe src="https://www.submithub.com/widget.html?color=000&background=40FFDC&size=24px&text=Have music to share? Send it our way!&blog=polyaux" frameborder="0" scrolling="no" width="100%" height="150px"></iframe>
+    <div style="text-align:center">
+      <div style="padding-top:50px;
+              border:1px;
+              solid;border-radius:2px;">
+            <iframe src="https://www.submithub.com/widget.html?color=000&background=40FFDC&size=24px&text=Have music to share? Send it our way!&blog=polyaux" frameborder="0" scrolling="no" width="100%" height="150px"></iframe>
+      </div>
+    </div>
     {% endif %}
 
 </div>
