--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,9 +90,25 @@
         {{ content }}
     </div>
 
+    <br>
+    <br>
+
+    <!-- Submissions
+    ================================================== -->
+    <div style="padding-top:0px;
+              border:1px solid;
+              border-radius:2px;">
+            <iframe src="https://www.submithub.com/widget.html?color=000&background=40FFDC&size=24px&text=Have music to share? Send it our way!&blog=polyaux" frameborder="0" scrolling="no" width="100%" height="100px"></iframe>
+    </div>
+
+    <br>
+    <br>
+
     {% if site.mailchimp-list %}
     <!-- Newsletter
     ================================================== -->
+
+
     <div class="newsletter text-center">
         <span class="h4"><img src="{{ site.baseurl }}/{{ site.altlogo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp; Never miss a <b>story</b> from us, subscribe to our newsletter</span>
         <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
@@ -102,13 +118,7 @@
             </div>
         </form>
     </div>
-<br>
-<br>
-      <div style="padding-top:0px;
-              border:1px solid;
-              border-radius:2px;">
-            <iframe src="https://www.submithub.com/widget.html?color=000&background=40FFDC&size=24px&text=Have music to share? Send it our way!&blog=polyaux" frameborder="0" scrolling="no" width="100%" height="100px"></iframe>
-    </div>
+
     {% endif %}
 
 </div>
