--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,13 +54,12 @@
         <li><a href="{{ site.baseurl }}/about">About</a></li>
         <li><a href="{{ site.baseurl }}/authors">Contributors</a></li>
         <!-- <li><a target="_blank" href="">Support Us on Patreon! <span class="badge badge-primary">new</span></a></li>       -->
-        <!-- Submissions ==================== -->
-        <li style="padding-top:0px;
-                  border:1px solid;
-                  border-radius:2px;">
-                <iframe src="https://www.submithub.com/widget.html?color=000&background=40FFDC&size=24px&text=Have music to share? Send it our way!&blog=polyaux" frameborder="0" scrolling="no" width="100%" height="25px"></iframe>
-        </li>
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+
+        <!-- Submissions ==================== -->
+        <button style="padding-top:0px; border:1px solid; border-radius:2px;">
+          <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">Send us your music on SubmitHub</a>
+        </button>
     </ul>
 </nav>
 
