--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,8 @@
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 
         <!-- Submissions ==================== -->
-        <button style="padding-top:0px; border:1px solid; border-radius:2px;">
-          <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">Send us your music on SubmitHub</a>
+        <button style="border:1px solid black; border-radius:3px; background-color: #555555;">
+          <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">Send us your music!</a>
         </button>
     </ul>
 </nav>
