--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,10 @@
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 
         <!-- Submissions ==================== -->
-        <button style="border:1px solid black; border-radius:3px; background-color: #555555;">
-          <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">Send us your music!</a>
+        <button style="border:1px solid black; border-radius:3px; background-color: #ffd600; color:black;">
+          <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">
+            <p style="margin-bottom:0; color:black;">Send us your music!</p>
+          </a>
         </button>
     </ul>
 </nav>
