--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,11 +57,11 @@
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 
         <!-- Submissions ==================== -->
-        <button style="border:1px solid black; border-radius:3px; background-color: #ffd600; color:black;">
+        <button style="border:1px solid black; border-radius:3px; background-color: #9575cd; color:white;">
           <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">
             <p style="margin-bottom:0; color:black;">Send us your music!</p>
           </a>
-        </button>
+        </button> <span class="badge badge-primary">new</span>
     </ul>
 </nav>
 
