--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,9 +57,9 @@
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 
         <!-- Submissions ==================== -->
-        <button style="border:1px solid black; border-radius:3px; background-color: #9575cd; color:white;">
+        <button style="border:1px solid black; border-radius:3px; background-color:#9575cd; color:white;">
           <a href="https://www.submithub.com/to/polyaux" target="_blank" title="Send music">
-            <p style="margin-bottom:0; color:black;">Send us your music!</p>
+            <p style="margin-bottom:0; color:white;">Send us your music!</p>
           </a>
         </button> <span class="badge badge-primary">new</span>
     </ul>
